[package]
name = "seufinder-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
signal-hook = { version = "0.3", features = ["flag"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Memory"] }
